--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-import streamlit as st
-import pandas as pd
-import appdirs as ad
-import yfinance as yf
-import matplotlib.pyplot as plt
-import matplotlib.dates as mdates
-from matplotlib import gridspec
+streamlit
+pandas
+appdirs
+yfinance
+matplotlib.pyplot
+matplotlib.dates
+matplotlib
